--- a/schemas/pulse-job.yml
+++ b/schemas/pulse-job.yml
@@ -171,7 +171,7 @@ properties:
       success: Build/Test executed without error or failure
       canceled: The job was cancelled by a user
       unknown: When the job is not yet completed
-      coalesced: When a job has been superseded by another job
+      superseded: When a job has been superseded by another job
     type: "string"
     enum:
       - success
