Change payload schema enum

--- a/schemas/pulse-job.yml
+++ b/schemas/pulse-job.yml
@@ -179,7 +179,7 @@ properties:
       - exception
       - canceled
       - unknown
-      - coalesced
+      - superseded
   jobKind:
     type: "string"
     default: "other"
